Added ability to parse integers expressed as 1.0